--- a/sample.html
+++ b/sample.html
@@ -12,7 +12,7 @@
   <button id="sumbit_button">Submit</button>
   
   <script src="Checker.js"></script>
-  <script type="text/javascrit">
+  <script type="text/javascript">
     PasswordCheck(false,'password',{
         button:'#sumbit_button',
         Repeat:true,
