password checker added
added password checker without tooltip.

--- a/sample.html
+++ b/sample.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form validator - Sample</title>
     <script src="checker.js"></script>
+    <link rel="stylesheet" href="default-style.css">
 </head>
 <body>
 
-  <form action="" data-email-checker data-password-repeat data-form-checker="">
+  <!-- <form action="" data-email-checker data-password-repeat data-form-checker="">
     <input type="email" placeholder=""">
     <input type="password">
   </form>
@@ -17,7 +18,7 @@
   <form action="" data-form-checker="">
     <input type="email">
   </form>
-  
+   -->
   <form action="" id="notInit">
     <input type="email">
     <input type="password">
