--- a/sample.html
+++ b/sample.html
@@ -10,19 +10,15 @@
 </head>
 <body>
 
-  <!-- <form action="" data-email-checker data-password-repeat data-form-checker="">
-    <input type="email" placeholder=""">
-    <input type="password">
-  </form>
+  <style>
+    form{max-width: 500px;display: flex; flex-direction: column;}
+    form input,form button{padding: 15px;}
+  </style>
 
-  <form action="" data-form-checker="">
-    <input type="email">
-  </form>
-   -->
   <form action="" id="notInit">
     <input type="email">
     <input type="password">
-    <button type="submit">Test</button>
+    <button type="submit">Register</button>
   </form>
 
   <script type="text/javascript">
